--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,20 +2,41 @@
   "short_name": "React App",
   "name": "Create React App Sample",
   "icons": [
+   
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "earth.png",
+      "type": "image/png",
+      "sizes": "835x779"
     },
     {
-      "src": "logo192.png",
+      "src": "planet1.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "835x611"
     },
     {
-      "src": "logo512.png",
+      "src": "planet2.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "835x831"
+    },
+    {
+      "src": "rocket.png",
+      "type": "image/png",
+      "sizes": "835x802"
+    },
+    {
+      "src": "satellite.png",
+      "type": "image/png",
+      "sizes": "835x835"
+    },
+    {
+      "src": "space.png",
+      "type": "image/png",
+      "sizes": "1920x1200"
+    },
+    {
+      "src": "star.png",
+      "type": "image/png",
+      "sizes": "821x854"
     }
   ],
   "start_url": ".",
